<resources>

    <string name="app_name">梯口机</string>

    <!-- 对讲文字 -->
    <string name="intercall_callout1">呼叫</string>
    <string name="intercall_hangup">挂机</string>
    <string name="intercall_callin">呼入</string>
    <string name="intercall_callout">呼出</string>
    <string name="intercall_callmiss">未接</string>
    <string name="intercall_snap">抓拍</string>
    <string name="intercall_lock">开锁</string>
    <string name="intercall_talk">通话</string>
    <string name="intercall_refuse">拒绝</string>
    <string name="intercall_seach">搜索</string>
    <string name="intercall_dev_door">门前机</string>
    <string name="intercall_dev_stair">梯口机</string>
    <string name="intercall_dev_area">区口机</string>
    <string name="intercall_dev_room">室内机</string>
    <string name="intercall_dev_fenji">分机</string>
    <string name="intercall_dev_center">管理员机</string>
    <string name="intercall_dev_roommain">主机</string>
    <string name="intercallhit_callin">来电中...</string>
    <string name="intercallhit_connect">连接中...</string>
    <string name="intercallhit_calling">呼叫中...</string>
    <string name="intercallhit_monitor">监视中...</string>
    <string name="intercallhit_movetemp">转移中...</string>
    <string name="intercallhit_recordhit">留言提示中...</string>
    <string name="intercallhit_recording">留言中...</string>
    <string name="intercallhit_talk">通话中...</string>
    <string name="intercallhit_talkbusy">对方忙无法进入通话...</string>
    <string name="intercallhit_connecttimeout">连接超时...</string>
    <string name="intercallhit_busy">对方忙...</string>
    <string name="intercallhit_errorip">连接失败</string>
    <string name="intercallhit_errornum">号码不存在</string>
    <string name="intercallhit_hostnum">输入号码错误</string>
    <string name="intercallhit_savelist">是否保存获取列表？</string>
    <string name="intercalldest_1">栋</string>
    <string name="intercalldest_2">单元</string>
    <string name="intercalldest_3">房</string>
    <string name="intercall_misstitle">未接来电</string>
    <string name="intercallhit_lock">开锁成功</string>
    <string name="intercall_fullscreen">全屏显示</string>
    <string name="rtspmonitor_yuzhidian">预置点</string>
    <string name="rtspmonitor_monitor_fail_net">网络故障，监视失败！</string>
    <string name="call_center_tip">请确认是否呼叫中心?</string>
    <string name="call_connect_loading">连接中...</string>
    <string name="call_connect_fail">无回答</string>
    <string name="manage_center">管理中心</string>
    <string name="call_open_door">门开了,请进入!</string>
    <string name="call_no_close_door">门未关！</string>
    <string name="call_door_tip1">请关好门</string>
    <string name="call_end">呼叫结束</string>
    <string name="call_please">请通话</string>
    <string name="call_please_ly">请留言...</string>
    <string name="call_busy">用户忙...</string>
    <string name="call_no_num">无此房号</string>
    <string name="call_no_respose">无人接听</string>
    <string name="call_invalid_card">卡无效</string>

    <!--设置-->
    <string name="setting_title">设置</string>
    <string name="setting_systerm">系统设置</string>
    <string name="setting_net">网络设置</string>
    <string name="setting_ip">本机IP：</string>
    <string name="setting_mask">子网掩码：</string>
    <string name="setting_gateway">网关：</string>
    <string name="setting_dns">DNS服务器：</string>
    <string name="setting_admin">管理员机：</string>
    <string name="setting_center_server">中心服务器：</string>
    <string name="setting_media_server">流媒体服务器：</string>
    <string name="setting_elevator">电梯控制器：</string>
    <string name="setting_face_client">人脸识别终端：</string>
    <string name="setting_success">设置成功！</string>
    <string name="setting_fail">设置失败！</string>
    <string name="setting_tkh_set">梯口号设置</string>
    <string name="setting_qkh_set">区口号设置</string>
    <string name="setting_rule_set">编号规则设置</string>
    <string name="setting_tkh">梯口号：</string>
    <string name="setting_qkh">区口号：</string>
    <string name="setting_deviceno">设备号：</string>
    <string name="setting_ldh">楼栋号：</string>
    <string name="setting_dyh">单元号：</string>
    <string name="setting_unit_enable">启用单元号：</string>
    <string name="setting_yes">是</string>
    <string name="setting_no">否</string>
    <string name="setting_tkh_length">梯口号长度：</string>
    <string name="setting_room_length">房号长度：</string>
    <string name="setting_unit_length">单元号长度：</string>
    <string name="setting_input_room_no">请输入房号</string>
    <string name="setting_pwd_fail">密码错误</string>
    <string name="setting_senior">高级设置</string>
    <string name="setting_senior_pwd_model">密码进门模式</string>
    <string name="setting_senior_alarm_param">强行开门报警</string>
    <string name="setting_photo_param">拍照参数</string>
    <string name="setting_senior_camera_param">启用访客拍照</string>
    <string name="setting_senior_camera_error">错误密码开门拍照</string>
    <string name="setting_senior_camera_xc">挟持密码开门拍照</string>
    <string name="setting_call_center_photo">呼叫中心拍照</string>
    <string name="setting_face_photo">人脸开门拍照</string>
    <string name="setting_finger_photo">指纹开门拍照</string>
    <string name="setting_card_photo">刷卡开门拍照</string>
    <string name="setting_pwd_photo">密码开门拍照</string>
    <string name="setting_qr_photo">扫码开门拍照</string>
    <string name="setting_senior_power_save">省电模式</string>
    <string name="setting_senior_pwd_dynamic">动态密码</string>
    <string name="setting_senior_screen_pro">屏保设置</string>
    <string name="setting_senior_sensitivity">灵敏度设置</string>
    <string name="setting_senior_low">简易模式</string>
    <string name="setting_senior_height">高级模式</string>
    <string name="setting_senior_h">高</string>
    <string name="setting_senior_m">中</string>
    <string name="setting_senior_l">低</string>
    <string name="setting_card_manage">卡管理</string>
    <string name="setting_card_room_no">房号：</string>
    <string name="setting_number">编号：</string>
    <string name="setting_card_no">卡号：</string>
    <string name="setting_card_add">添加卡</string>
    <string name="setting_card_delete">删除卡</string>
    <string name="setting_card_del_all">是否删除所有卡号？</string>
    <string name="setting_card_tip">请注意！在此进行\n的卡管理，只针对\n本地有效，不与中\n心同步</string>
    <string name="setting_pwd_manage">密码管理</string>
    <string name="setting_pwd">密码：</string>
    <string name="setting_pwd_add">添加密码</string>
    <string name="setting_pwd_delete">删除密码</string>
    <string name="setting_pwd_del_all">是否删除所有密码？</string>
    <string name="setting_pwd_update">修改管理密码</string>
    <string name="setting_pwd_new">请输入新密码：</string>
    <string name="setting_pwd_new_again">请再次输入新密码：</string>
    <string name="setting_pwd_error">两次密码输入不一致，请重新输入！</string>
    <string name="setting_entrance_guard">门禁设置</string>
    <string name="setting_lock_type">开锁类型</string>
    <string name="setting_door_testing">门状态检测</string>
    <string name="setting_face">人脸识别</string>
    <string name="setting_saoma">扫码开门</string>
    <string name="setting_open_lock_time">开锁时间</string>
    <string name="setting_alarm_out">报警输出</string>
    <string name="setting_center_up">上报中心</string>
    <string name="setting_body_feel">人体感应</string>
    <string name="setting_face_clear">是否清空人脸记录？</string>
    <string name="setting_secury_level">安全级别</string>
    <string name="setting_face_living">人脸活体检测</string>
    <string name="setting_face_yuzhi">识别阈值：</string>
    <string name="setting_face_yuzhi_range">阈值范围  50~80</string>
    <string name="setting_face_sbyz">人脸识别阈值</string>
    <string name="setting_household">住户设置</string>
    <string name="setting_household_start">起始房号：</string>
    <string name="setting_household_floor_num">楼层数：</string>
    <string name="setting_household_floor_user">每层户数：</string>
    <string name="setting_volume">声音设置</string>
    <string name="setting_volume_call">通话音量：</string>
    <string name="setting_volume_tip">提示音</string>
    <string name="setting_volume_key">按键语音</string>
    <string name="setting_open_often">常开</string>
    <string name="setting_close_often">常闭</string>
    <string name="setting_enable">启用</string>
    <string name="setting_ban">禁用</string>
    <string name="setting_close">关闭</string>
    <string name="setting_blue_tooth_open">蓝牙开门器</string>
    <string name="setting_device_register">设备注册ID：</string>
    <string name="setting_reset_factory">是否恢复出厂设置？</string>
    <string name="setting_reset_factory_processing">处理中...</string>
    <string name="setting_choice_language">请选择语言</string>
    <string name="setting_choice_card_num">请选择卡号位数</string>
    <string name="setting_choice_device_nature">请选择设备属性</string>
    <string name="setting_choice_call_type">呼叫方式</string>
    <string name="setting_enable_center">启用中心机</string>
    <string name="setting_name">姓名：</string>


    <string name="device_info">设备信息</string>
    <string name="device_info_nature">设备属性：</string>
    <string name="device_info_tkh">梯口号：</string>
    <string name="device_info_room_start">起始房号：</string>
    <string name="device_info_floor_num">楼层数：</string>
    <string name="device_info_floor_num_user">每层户数：</string>
    <string name="device_info_lock_type">开锁类型：</string>
    <string name="device_info_lock_time">开锁时间：</string>
    <string name="device_info_lock_door_check">门状态检测：</string>
    <string name="device_info_alarm_out">报警输出：</string>
    <string name="device_info_update_center">上报中心：</string>
    <string name="device_info_call_type">呼叫方式：</string>
    <string name="device_info_unit_num">单元号：</string>
    <string name="device_info_card_num">剩余卡数：</string>
    <string name="device_info_face_num">剩余用户数：</string>

    <string name="device_info_1">密码开门模式：</string>
    <string name="device_info_2">强行开门报警：</string>
    <string name="device_info_6">省电模式：</string>
    <string name="device_info_7">屏保：</string>
    <string name="device_info_8">按键灵敏度：</string>
    <string name="device_info_9">卡号长度：</string>
    <string name="device_info_10">梯口号长度：</string>
    <string name="device_info_11">房号长度：</string>
    <string name="device_info_12">单元号长度：</string>
    <string name="device_info_13">分段描述：</string>
    <string name="device_info_14">通话音量：</string>
    <string name="device_info_15">提示音：</string>
    <string name="device_info_16">按键音：</string>

    <string name="device_info_photo_1">访客呼叫拍照：</string>
    <string name="device_info_photo_2">错误密码开门拍照：</string>
    <string name="device_info_photo_3">挟持密码开门拍照：</string>
    <string name="device_info_photo_4">呼叫中心拍照：</string>
    <string name="device_info_photo_5">人脸开门拍照：</string>
    <string name="device_info_photo_6">指纹开门拍照：</string>
    <string name="device_info_photo_7">刷卡开门拍照：</string>
    <string name="device_info_photo_8">密码开门拍照：</string>
    <string name="device_info_photo_9">扫码开门拍照：</string>

    <string name="device_info_version">版本：</string>
    <string name="device_info_position">位</string>
    <string name="device_info_calltype_bm">编码式</string>
    <string name="device_info_calltype_za">直按式</string>
    <string name="no_device_permission">没有设备管理权限</string>

    <!--二维码-->
    <string name="qr_tip_1">请对准二维码，耐心等待</string>
    <string name="qr_tip_2">正在进行扫描验证</string>
    <string name="qr_tip_3">门开了，请进入！</string>
    <string name="qr_tip_4">无效二维码</string>
    <string name="qr_tip_5">过期二维码</string>
    <string name="qr_tip_6">请扫码开门</string>
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>

    <!--人脸识别-->
    <string name="face_manage_title">人脸注册管理</string>
    <string name="face_scan_hint3">请正对着设备\n轻微抬头或左右摇头</string>
    <string name="face_recognition_fail1">暂时无法识别人脸</string>
    <string name="face_recognition_fail2">请使用刷卡或密码进门</string>

</resources>
