<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/devinfo_page_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_pwd_mode"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_1" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_forced_open"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_2" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_power_saving"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_6" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_screen_saver"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_7" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_sensitivity"
            style="@style/devinfo_lbltv_style"
            app:label="@string/key_sensitivity" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_card_no_len"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_9" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_tk_no_len"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_200"
        android:orientation="vertical">

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_room_no_len"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_11" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_cell_no_len"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_12" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_no_rule"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_13" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_call_volume"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_14" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_prompt_tone"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_15" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_key_tone"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/turn_hint"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_4"
            android:src="@drawable/key_up" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_2"
            android:src="@drawable/key_down" />
    </LinearLayout>
</FrameLayout>