<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/devinfo_page_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_devtype"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_nature" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_tk_no"
            style="@style/devinfo_lbltv_style" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_room_start"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_room_start" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_floor_count"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_floor_num" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_room_count"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_floor_num_user" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_unlock_type"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_lock_type" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_unlock_time"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_lock_time" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_door_check"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_lock_door_check" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_200"
        android:orientation="vertical">

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_door_alarm"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_alarm_out" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_door_upload"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_update_center" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_cell_no"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_unit_num" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_card_free"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_card_num" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_face_free"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_face_num" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_fingerprint_free"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_fingerprint_num" />

        <com.mili.smarthome.tkj.widget.LabelTextView
            android:id="@+id/tv_dev_no"
            style="@style/devinfo_lbltv_style"
            app:label="@string/device_info_device_no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/turn_hint"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_4"
            android:src="@drawable/key_up" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_2"
            android:src="@drawable/key_down" />

    </LinearLayout>
</FrameLayout>