<?xml version="1.0" encoding="utf-8"?>
<com.mili.smarthome.tkj.main.widget.SetSuccessView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_title"
        style="@style/SettingTitleStyle"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10px"
        android:orientation="vertical">


        <LinearLayout
            android:paddingLeft="140px"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_tkh"
                style="@style/SettingLeftTvStyle"
                android:layout_alignParentLeft="true"
                android:text="@string/setting_tkh_length" />


            <com.mili.smarthome.tkj.set.widget.inputview.CustomInputView
                android:id="@+id/it_tkh_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            </com.mili.smarthome.tkj.set.widget.inputview.CustomInputView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_deviceno"
            android:paddingLeft="140px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10px">

            <TextView
                android:id="@+id/tv_device_no"
                style="@style/SettingLeftTvStyle"
                android:layout_alignParentLeft="true"
                android:text="@string/setting_room_length" />


            <com.mili.smarthome.tkj.set.widget.inputview.CustomInputView
                android:id="@+id/it_device_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_device_no">

            </com.mili.smarthome.tkj.set.widget.inputview.CustomInputView>

        </RelativeLayout>


        <RelativeLayout
            android:paddingLeft="140px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10px">

            <TextView
                android:id="@+id/tv_enable"
                style="@style/SettingLeftTvStyle"
                android:layout_alignParentLeft="true"
                android:text="@string/setting_unit_length" />


            <com.mili.smarthome.tkj.set.widget.inputview.CustomInputView
                android:id="@+id/it_unit_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_enable">

            </com.mili.smarthome.tkj.set.widget.inputview.CustomInputView>

        </RelativeLayout>


    </LinearLayout>


</com.mili.smarthome.tkj.main.widget.SetSuccessView>